--- a/templates/landing.html
+++ b/templates/landing.html
@@ -9,7 +9,7 @@
         <meta name="author" content="">
         <link rel="shortcut icon" href="{% static "ico/favicon.ico" %}">
     
-        <title>Niqels - Software para controle financeiro. Online e Grátis.</title>
+        <title>Niqels</title>
     
         <!-- Bootstrap core CSS -->
         <link rel="stylesheet" type="text/css" href="{% static "css/landing.css" %}" />
@@ -59,7 +59,7 @@
            
         <div id="main" class="well">
             <div id="title">
-                <h1>Assessor financeiro pessoal. <span>Online e grátis.</span></h1>
+                <h1>Software para controle financeiro. <span>Online e Grátis.</span></h1>
                 <p class="lead lead-custom">
                     Acompanhe suas despesas online, com relatórios simplificados no seu computador, tablet ou celular.
                 </p>
