--- a/templates/webapp/transactions/transaction-list.html
+++ b/templates/webapp/transactions/transaction-list.html
@@ -28,15 +28,17 @@
                                 ng-click="groupBy = 'date'"
                                 ng-class="{active: groupBy == 'date'}"
                                 >
+                                <i class="icon-ok"></i>
                                 {% trans "date" %}
                             </a>
                         </li>
-                        /
+                        <li>/</li>
                         <li>
                             <a
                                 ng-class="{active: groupBy == 'category.name'}"
                                 ng-click="groupBy = 'category.name'"
                                 >
+                                <i class="icon-ok"></i>
                                 {% trans "category" %}
                             </a>
                         </li>
