full report link

--- a/static/less/webapp/balance.less
+++ b/static/less/webapp/balance.less
@@ -57,6 +57,12 @@
             }
         }
     }
+
+    a.more {
+        float: right;
+        font-style: italic;
+        margin-top: 10px;
+    }
 }
 
 p {
