redoing transaction list options

--- a/static/less/webapp/balance.less
+++ b/static/less/webapp/balance.less
@@ -2,7 +2,7 @@
 #balance-panel {
     .panel {
         background-color: transparent;
-        border-style: dashed;
+        border-style: solid;
         box-shadow: 0 0 3px #ccc;
     }
 
