--- a/static/less/webapp/transaction-list.less
+++ b/static/less/webapp/transaction-list.less
@@ -12,6 +12,10 @@ a[data-toggle="collapse"] {
     cursor: pointer;
 }
 
+.content-column-middle {
+    background-color: @white;
+}
+
 #transaction-list-options {
     background-color: transparent;
     border: 1px solid @component-bg-color;
