--- a/templates/webapp/transactions/transaction-form.html
+++ b/templates/webapp/transactions/transaction-form.html
@@ -2,9 +2,7 @@
 
 <h4 class="area-header">{% trans "New transaction" %}</h4>
 
-<div class="panel panel-default">
-
-<div ng-controller="TransactionFormCtrl" class="panel-body">
+<div ng-controller="TransactionFormCtrl" class="">
 <form
     class="transaction-form"
     name="transactionForm"
@@ -89,6 +87,4 @@
 </form>
 
 
-</div>
-</div>
 </div>
