--- a/static/less/variables.less
+++ b/static/less/variables.less
@@ -128,8 +128,8 @@
 
 @btn-font-weight:                normal;
 
-@btn-default-color:              #333;
-@btn-default-bg:                 #fff;
+@btn-default-color:              @link-color;
+@btn-default-bg:                 @azul-claro;
 @btn-default-border:             #ccc;
 
 @btn-primary-color:              #fff;
