--- a/static/less/webapp/styles.less
+++ b/static/less/webapp/styles.less
@@ -41,6 +41,8 @@ body {
     min-height: 100%;
     border-left: 1px solid #ccc;
     border-right: 1px solid #ccc;
+    padding-left: 0;
+    padding-right: 0;
     background-color: @white;
 
     .content-main {
