--- a/templates/base.html
+++ b/templates/base.html
@@ -32,14 +32,14 @@
     <div class="navbar navbar-default" role="navigation">
         <div class="container">
             <div class="navbar-header">
-                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-ex1-collapse">
+                <a class="navbar-brand" href="{% url "index" %}">
+                    <img src="{% static "img/niqels-logo-hor.png" %}" class="brand-logo">
+                </a>
+                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#navbar-menu">
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="{% url "index" %}">
-                    <img src="{% static "img/niqels-logo-hor.png" %}" class="brand-logo">
-                </a>
             </div>
 
             {% block webapp-menu %}
