--- a/templates/access/login.html
+++ b/templates/access/login.html
@@ -30,7 +30,7 @@
             <div class="form-group {% if form.username.errors %}has-error{% endif %}">
                 <label class="col-lg-3 control-label" for="username">{% trans "Email" %}</label>
                 <div class="col-lg-9 input-icon">
-                    <i class="icon-envelope input-icon-prepend"></i>
+                    <i class="fa fa-envelope input-icon-prepend"></i>
                     <input
                         type="email"
                         name="username"
@@ -47,7 +47,7 @@
             <div class="form-group {% if form.password.errors %}has-error{% endif %}">
                 <label class="col-lg-3 control-label" for="password">{% trans "Password" %}</label>
                 <div class="col-lg-9 input-icon">
-                    <i class="icon-asterisk input-icon-prepend"></i>
+                    <i class="fa fa-asterisk input-icon-prepend"></i>
                     <input
                         type="password"
                         name="password"
@@ -65,7 +65,7 @@
                 <div class="col-lg-offset-3 col-lg-9">
                     <button class="btn btn-primary" type="submit">
                         {% trans "Login" %}
-                        <i class="icon-ok icon-large"></i>
+                        <i class="fa fa-check fa-lg"></i>
                     </button>
                 </div>
             </div>
