--- a/templates/webapp/reports/reports.html
+++ b/templates/webapp/reports/reports.html
@@ -23,7 +23,8 @@
             ng-click="updateCharts()"
             track="click,Reports,update-period"
             >
-            {% trans "Update" %}
+            {% trans "Update" %}&nbsp;
+            <i class="fa fa-refresh"></i>
         </button>
     </div>
 
