--- a/templates/access/change_password.html
+++ b/templates/access/change_password.html
@@ -31,7 +31,7 @@
                 <div class="col-lg-offset-3 col-lg-9">
                     <button type="submit" class="btn btn-primary">
                         {% trans "Reset password" %}
-                        <i class="icon-ok icon-large"></i>
+                        <i class="fa fa-ok fa-lg"></i>
                     </button>
                 </div>
             </div>
