--- a/templates/access/forms/register.html
+++ b/templates/access/forms/register.html
@@ -4,7 +4,7 @@
     <div class="form-group {% if register_form.name.errors %}has-error{% endif %}">
         <label class="col-lg-3 control-label" for="name">{% trans "Name" %}</label> 
         <div class="col-lg-9 input-icon">
-            <i class="icon-user input-icon-prepend"></i>
+            <i class="fa fa-user input-icon-prepend"></i>
             <input
                 type="text"
                 name="name"
@@ -20,7 +20,7 @@
     <div class="form-group {% if register_form.email.errors %}has-error{% endif %}">
         <label class="col-lg-3 control-label" for="email">{% trans "Email" %}</label> 
         <div class="col-lg-9 input-icon">
-            <i class="icon-envelope input-icon-prepend"></i>
+            <i class="fa fa-envelope input-icon-prepend"></i>
             <input
                 type="email"
                 name="email"
@@ -36,7 +36,7 @@
     <div class="form-group {% if register_form.password.errors %}has-error{% endif %}">
         <label class="col-lg-3 control-label" for="password">{% trans "Password" %}</label> 
         <div class="col-lg-9 input-icon">
-            <i class="icon-asterisk input-icon-prepend"></i>
+            <i class="fa fa-asterisk input-icon-prepend"></i>
             <input
                 type="password"
                 name="password"
@@ -52,7 +52,7 @@
     <div class="form-group {% if register_form.password_confirm.errors %}has-error{% endif %}">
         <label class="col-lg-3 control-label" for="password_confirm">{% trans "Confirm password" %}</label> 
         <div class="col-lg-9 input-icon">
-            <i class="icon-asterisk input-icon-prepend"></i>
+            <i class="fa fa-asterisk input-icon-prepend"></i>
             <input
                 type="password"
                 name="password_confirm"
@@ -69,7 +69,7 @@
         <div class="col-lg-offset-3 col-lg-9">
             <button type="submit" value="{% trans "Sign up" %}" class="btn btn-danger">
                 {% trans "Sign up" %}
-                <i class="icon-user"></i>
+                <i class="fa fa-user"></i>
             </button>
         </div>
     </div>
