--- a/templates/landing.html
+++ b/templates/landing.html
@@ -42,9 +42,9 @@
                 <div class="navbar-header">
                     <a class="" href="#"><img src="{% static "img/niqels-rgb.png" %}" id="logo"></a>
                     <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#navbar-links">
-                        <span class="icon-bar"></span>
-                        <span class="icon-bar"></span>
-                        <span class="icon-bar"></span>
+                        <span class="fa fa-bar"></span>
+                        <span class="fa fa-bar"></span>
+                        <span class="fa fa-bar"></span>
                     </button>
                 </div> <!-- .navbar-header -->
 
@@ -67,9 +67,7 @@
             <div class="panel-group container" id="features">
 
                 <div class="row">
-                    <a id="register-button" class="btn btn-lg btn-warning btn-custom" href="/register/">Experimente agora 
-                        <span class="glyphicon glyphicon-chevron-right"></span>
-                    </a>
+                    <a id="register-button" class="btn btn-lg btn-warning btn-custom" href="/register/">Experimente agora</a>
                 </div>
 
                 <div class="row">
