--- a/templates/webapp/reports/category-comparison.html
+++ b/templates/webapp/reports/category-comparison.html
@@ -5,7 +5,7 @@
 <div class="row">
     <div class="col-md-6 category1 input-icon">
         <label for="category1" class="form-label">{% trans "Category 1" %}</label>
-        <i class="icon-tag input-icon-prepend"></i>
+        <i class="fa fa-tag input-icon-prepend"></i>
         <select
             id="category1"
             class="form-control"
@@ -19,7 +19,7 @@
     </div>
     <div class="col-md-6 category2 input-icon">
         <label for="category2" class="form-label">{% trans "Category 2" %}</label>
-        <i class="icon-tag input-icon-prepend"></i>
+        <i class="fa fa-tag input-icon-prepend"></i>
         <select
             id="category2"
             class="form-control"
