--- a/templates/webapp/transactions/transaction-form.html
+++ b/templates/webapp/transactions/transaction-form.html
@@ -13,7 +13,7 @@
 
     <div class="form-group input-icon">
         <label for="id_category" class="form-label">{% trans "Category" %}</label>
-        <i class="icon-tag input-icon-prepend"></i>
+        <i class="fa fa-tag input-icon-prepend"></i>
         <select
             id="id_category"
             name="category"
@@ -29,14 +29,14 @@
             >
         </select>
         <i
-            class="icon-exclamation icon-large input-icon-append input-error"
+            class="fa fa-exclamation fa-lg input-icon-append input-error"
             ng-show="transactionForm.category.$error.required && transactionForm.category.$dirty"
             ></i>
     </div>
 
     <div class="form-group input-icon">
         <label for="id_value" class="form-label">{% trans "Value" %}</label>
-        <i class="icon-dollar input-icon-prepend"></i>
+        <i class="fa fa-dollar input-icon-prepend"></i>
         <input
             id="id_value"
             name="value"
@@ -53,7 +53,7 @@
 
     <div class="form-group input-icon">
         <label for="id_description" class="form-label">{% trans "Description" %}</label>
-        <i class="icon-pencil input-icon-prepend"></i>
+        <i class="fa fa-pencil input-icon-prepend"></i>
         <input
             id="id_description"
             maxlength="200"
@@ -81,8 +81,8 @@
 
     <button ng-click="submit()" class="btn btn-block btn-primary" ng-disabled="sending">
     {% trans "Submit" %}
-    <i ng-show="sending" class="icon-spinner icon-spin icon-large"></i>
-    <i ng-hide="sending" class="icon-ok icon-large"></i>
+    <i ng-show="sending" class="fa fa-spinner fa-spin fa-lg"></i>
+    <i ng-hide="sending" class="fa fa-check fa-lg"></i>
     </button>
 </form>
 
