redoing some structures

--- a/static/less/variables.less
+++ b/static/less/variables.less
@@ -129,7 +129,7 @@
 @btn-font-weight:                normal;
 
 @btn-default-color:              @link-color;
-@btn-default-bg:                 @azul-claro;
+@btn-default-bg:                 @component-bg-color;
 @btn-default-border:             #ccc;
 
 @btn-primary-color:              #fff;
