--- a/static/less/webapp/balance.less
+++ b/static/less/webapp/balance.less
@@ -1,7 +1,7 @@
 
 #balance-panel {
     .panel {
-        background-color: transparent;
+        background-color: @white;
         border-style: solid;
         box-shadow: 0 0 3px #ccc;
     }
