--- a/static/less/webapp/styles.less
+++ b/static/less/webapp/styles.less
@@ -79,12 +79,12 @@ body {
 }
 
 .left-column {
-    .make-sm-column(5);
+    .make-sm-column(4);
     .make-md-column(3);
 }
 
 .content-column {
-    .make-sm-column(7);
+    .make-sm-column(8);
     .make-md-column(9);
 
     min-height: 100%;
@@ -96,13 +96,13 @@ body {
 
     .content-main {
         height: 100%;
-        .make-sm-column(8);
+        .make-sm-column(12);
         .make-md-column(8);
     }
 
     .content-right-column {
-        .make-sm-column(4);
-        .make-lg-column(4);
+        .make-sm-column(12);
+        .make-md-column(4);
     }
 }
 
