--- a/templates/webapp/transactions/transaction-list.html
+++ b/templates/webapp/transactions/transaction-list.html
@@ -173,6 +173,8 @@
 
     </div> <!-- panel -->
 
+    <div class="clearfix visible-sm visible-xs"></div>
+
     <div class="content-right-column" id="balance-panel">
         {% include "webapp/transactions/month_balance_panel.html" %}
     </div>
