--- a/templates/base.html
+++ b/templates/base.html
@@ -36,9 +36,7 @@
                     <img src="{% static "img/niqels-logo-hor.png" %}" class="brand-logo">
                 </a>
                 <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#navbar-menu">
-                    <span class="fa fa-bar"></span>
-                    <span class="fa fa-bar"></span>
-                    <span class="fa fa-bar"></span>
+                    <i class="fa fa-bars fa-lg"></i>
                 </button>
             </div>
 
