changing datepicjer font

--- a/static/less/datepicker-override.less
+++ b/static/less/datepicker-override.less
@@ -1,6 +1,7 @@
 @import "variables.less";
 
 .datepicker {
+    font-size: 12px;
     border: 1px solid @input-border;
 	border-radius: @border-radius-base !important;
 
